--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -1,10 +1,11 @@
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-hook_source = '''
-  let g:deoplete#enable_at_startup = 1
-  inoremap <expr><tab> pumvisible() ? "\<C-n>" : "\<tab>"
-'''
+depends = 'context_filetype.vim'
+if = "has('nvim')"
 on_i = 1
+hook_source = '''
+source ~/.config/nvim/plugins/deoplete.rc.vim
+'''
 
 [[plugins]]
 repo = 'Shougo/neosnippet'
