--- a/.tigrc
+++ b/.tigrc
@@ -1,3 +1,7 @@
 # 画面分割するサイズ
 set split-view-height = 50%
 set split-view-width = 50%
+
+# https://qiita.com/numanomanu/items/513d62fb4a7921880085
+bind main    B !git rebase -i %(commit)
+bind diff    B !git rebase -i %(commit)
