--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,9 @@
   ad = !git add .  && git status
   br = branch -a -v
   brc = "!git branch -r --merged master | grep -v -e master -e develop -e alter* -e config -e master* | sed -e 's% *origin/%%' | xargs -I echo" # マージズミのブランチを確認
+  bc = "!git branch --merged master | grep -v -e master -e develop -e alter* -e config -e master* | sed -e 's% *origin/%%' | xargs -I echo" # マージズミのブランチを確認
   brd = "!git branch -r --merged master | grep -v -e master -e develop -e alter* -e config -e master* | sed -e 's% *origin/%%' | xargs -I% git push --delete origin %" # マージズミのブランチを削除する
+  bd = "!git branch --merged master | grep -v -e master -e develop -e alter* -e config -e master* | xargs -I% git branch -d %" # マージズミのブランチを削除する
   brc-cms = "!git branch -r --merged staging | grep -v -e staging -e develop -e alter* -e config -e master* | sed -e 's% *origin/%%' | xargs -I echo" # マージズミのブランチを確認
   brd-cms = "!git branch -r --merged staging | grep -v -e staging -e develop -e alter* -e config -e master* | sed -e 's% *origin/%%' | xargs -I% git push --delete origin %" # マージズミのブランチを削除する
   ci = commit -a -m
