mod gocode => go-lsp

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -103,6 +103,15 @@ if = "has('nvim')"
 hook_add = '''
 '''
 # ==========================================================
+# Golang
+# ==========================================================
+[[plugins]]
+repo = 'prabirshrestha/async.vim'
+
+[[plugins]]
+repo = 'prabirshrestha/vim-lsp'
+
+# ==========================================================
 # terminal
 # ==========================================================
 [[plugins]]
