--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -8,20 +8,28 @@ source ~/.config/nvim/plugins/deoplete.rc.vim
 '''
 
 [[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
 repo = 'Shougo/neosnippet'
 hook_source = '''
-  imap <C-k> <Plug>(neosnippet_expand_or_jump)
-  smap <C-k> <Plug>(neosnippet_expand_or_jump)
-  xmap <C-k> <Plug>(neosnippet_expand_target)
-  if has('conceal')
-    set conceallevel=2 concealcursor=niv
-  endif
-"inoremap <expr><BS> neocomplete#smart_close_popup()."<C-h>"
-"" エンターキーで補完候補の確定. スニペットの展開もエンターキーで確定・・・・・・②
-"imap <expr><CR> neosnippet#expandable() ? "<Plug>(neosnippet_expand)" : pumvisible() ? "<C-y>" : "<CR>"
-"" タブキーで補完候補の選択. スニペット内のジャンプもタブキーでジャンプ・・・・・・③
-"imap <expr><TAB> pumvisible() ? "<C-n>" : neosnippet#jumpable() ? "<Plug>(neosnippet_expand_or_jump)" : "<TAB>"
-let g:neosnippet#enable_snipmate_compatibility = 1
+let g:neosnippet#disable_runtime_snippets = {
+    \ 'go': 1
+\}
+
+" Keybindings
+imap <C-k> <Plug>(neosnippet_expand_or_jump)
+smap <C-k> <Plug>(neosnippet_expand_or_jump)
+xmap <C-k> <Plug>(neosnippet_expand_target)
+
+imap <expr><TAB>
+ \ pumvisible() ? "\<C-n>" :
+ \ neosnippet#expandable_or_jumpable() ?
+ \    "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
+smap <expr><TAB> neosnippet#expandable_or_jumpable() ? "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
+
+" Set the path to our snippets
+let g:neosnippet#snippets_directory='~/.config/nvim/snippets'
 '''
 on_i  = 1
 depends = ['neosnippet-snippets']
