--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -23,7 +23,8 @@ repo = 'Shougo/neosnippet-snippets'
 repo = 'Shougo/neosnippet'
 hook_source = '''
 let g:neosnippet#disable_runtime_snippets = {
-    \ 'go': 1
+    \ 'go': 1,
+    \ 'markdown': 1,
 \}
 
 " Keybindings
