--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -96,6 +96,10 @@ hook_add = '''
 let g:airline_theme='luna'
 '''
 
+# vim git
+[[plugins]]
+repo = 'tpope/vim-fugitive'
+
 # ==========================================================
 # Golang
 # ==========================================================
