--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -8,7 +8,7 @@ source ~/.config/nvim/plugins/deoplete.rc.vim
 '''
 
 [[plugins]]
-repo = 'zchee/deoplete-go'
+repo = 'deoplete-plugins/deoplete-go'
 on_ft = 'go'
 build = 'make'
 hook_source = '''
