--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -151,3 +151,10 @@ let g:vim_markdown_folding_disabled = 1
 let g:vim_markdown_auto_insert_bullets = 0
 let g:vim_markdown_new_list_item_indent = 0
 '''
+
+# ==========================================================
+# GraphQL
+# ==========================================================
+[[plugins]]
+repo = 'jparise/vim-graphql'
+on_ft = 'graphql'
