--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -7,14 +7,14 @@ hook_source = '''
 source ~/.config/nvim/plugins/deoplete.rc.vim
 '''
 
-[[plugins]]
-repo = 'deoplete-plugins/deoplete-go'
-on_ft = 'go'
-build = 'make'
-hook_source = '''
-let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
-let g:deoplete#sources#go#sort_class = ['package', 'func', 'type', 'var', 'const']
-'''
+#[[plugins]]
+#repo = 'deoplete-plugins/deoplete-go'
+#on_ft = 'go'
+#build = 'make'
+#hook_source = '''
+#let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
+#let g:deoplete#sources#go#sort_class = ['package', 'func', 'type', 'var', 'const']
+#'''
 
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
@@ -22,21 +22,14 @@ repo = 'Shougo/neosnippet-snippets'
 [[plugins]]
 repo = 'Shougo/neosnippet'
 hook_source = '''
-let g:neosnippet#disable_runtime_snippets = {
-    \ 'go': 1,
-    \ 'markdown': 1,
-\}
+let g:neosnippet#enable_snipmate_compatibility = 1
+let g:neosnippet#enable_complete_done = 1
+let g:neosnippet#enable_completed_snippet = 1
 
 " Keybindings
 imap <C-k> <Plug>(neosnippet_expand_or_jump)
 smap <C-k> <Plug>(neosnippet_expand_or_jump)
 xmap <C-k> <Plug>(neosnippet_expand_target)
-
-imap <expr><TAB>
- \ pumvisible() ? "\<C-n>" :
- \ neosnippet#expandable_or_jumpable() ?
- \    "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
-smap <expr><TAB> neosnippet#expandable_or_jumpable() ? "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
 
 " Set the path to our snippets
 let g:neosnippet#snippets_directory='~/.config/nvim/snippets'
