--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -154,3 +154,36 @@ let g:vim_markdown_new_list_item_indent = 0
 [[plugins]]
 repo = 'jparise/vim-graphql'
 on_ft = 'graphql'
+
+
+# ==========================================================
+# Auto complete
+# ==========================================================
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
+repo = 'Shougo/neosnippet'
+hook_source = '''
+imap <C-k>     <Plug>(neosnippet_expand_or_jump)
+smap <C-k>     <Plug>(neosnippet_expand_or_jump)
+xmap <C-k>     <Plug>(neosnippet_expand_target)
+
+" SuperTab like snippets behavior.
+" Note: It must be "imap" and "smap".  It uses <Plug> mappings.
+imap <expr><TAB>
+ \ pumvisible() ? "\<C-n>" :
+ \ neosnippet#expandable_or_jumpable() ?
+ \    "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
+smap <expr><TAB> neosnippet#expandable_or_jumpable() ?
+\ "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>"
+
+" For conceal markers.
+if has('conceal')
+  set conceallevel=2 concealcursor=niv
+endif
+" Set the path to our snippets
+let g:neosnippet#snippets_directory='~/.config/nvim/snippets'
+'''
+on_i  = 1
+depends = ['neosnippet-snippets']
