--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,3 @@
-# utf-8環境
-setw -g utf8 on
-set -g status-utf8 on
-
 #全てのベルを無視
 set-option -g bell-action none
 # ウィンドウ番号基準値
@@ -10,6 +6,9 @@ set-option -g base-index 1
 set-window-option -g automatic-rename off
 #ウィンドウで動作があるとステータスラインでハイライト
 set-window-option -g monitor-activity on
+
+# clipboardを有効にする
+set-clipbaord on
 
 # コピー、選択モードのキーバインドvi
 set -g mode-keys vi
@@ -85,8 +84,7 @@ bind-key M \
 #set -g status-bg white
 
 # 現在のウィンドウの色
-set-window-option -g window-status-current-fg   white
-set-window-option -g window-status-current-bg   blue
+setw -g window-status-activity-style bg="blue","underscore",fg="white"
 # ステータスバー
 #set -g status-fg green
 #set -g status-bg white
