--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -1,72 +1,13 @@
-# ==========================================================
-# lsp-config
-# ==========================================================
-# https://riq0h.jp/2021/09/15/084023/
 [[plugins]]
- repo = 'neovim/nvim-lspconfig'
- on_event = 'BufEnter'
+ repo = 'matsui54/denops-signature_help'
+ on_source = 'ddc.vim'
  hook_source = '''
- lua << EOF
- local on_attach = require("plugins.configs.lspconfig").on_attach
- local capabilities = require("plugins.configs.lspconfig").capabilities
+ call signature_help#enable()
+'''
 
- local lspconfig = require("lspconfig")
- local configs = require 'lspconfig/configs'
- local util = require "lspconfig/util"
-
- if not configs.golangcilsp then
-   configs.golangcilsp = {
-     default_config = {
-       cmd = {'golangci-lint-langserver'},
-       root_dir = lspconfig.util.root_pattern('.git', 'go.mod'),
-       init_options = {
-         command = { "golangci-lint", "run", "--enable-all", "--disable", "lll", "--out-format", "json", "--issues-exit-code=1" };
-       }
-     };
-   }
- end
- lspconfig.golangci_lint_ls.setup {
- 	filetypes = {'go','gomod'}
- }
-
- lspconfig.gopls.setup {
-   on_attach = on_attach,
-   capabilities = capabilities,
-   cmd = {"gopls"},
-   filetypes = { "go", "gomod", "gowork", "gotmpl" },
-   root_dir = util.root_pattern("go.work", "go.mod", ".git"),
-   settings = {
-     gopls = {
-       completeUnimported = true,
-       usePlaceholders = true,
-       analyses = {
-         unusedparams = true,
-       },
-     },
-   },
- }
-
-local on_attach = function (client, bufnr)
- local function buf_set_keymap(...) vim.api.nvim_buf_set_keymap(bufnr, ...) end
- local function buf_set_option(...) vim.api.nvim_buf_set_option(bufnr, ...) end
-
- local opts = { noremap=true, silent=true }
- buf_set_keymap('n', 'gd', '<Cmd>lua vim.lsp.buf.definition()<CR>', opts)
- buf_set_keymap('n', 'K', '<Cmd>lua vim.lsp.buf.hover()<CR>', opts)
- buf_set_keymap('n', 'gi', '<cmd>lua vim.lsp.buf.implementation()<CR>', opts)
- buf_set_keymap('n', 'gs', '<cmd>lua vim.lsp.buf.signature_help()<CR>', opts)
- buf_set_keymap('n', 'gr', '<cmd>lua vim.lsp.buf.references()<CR>', opts)
- buf_set_keymap('n', 'gx', '<cmd>lua vim.lsp.diagnostic.show_line_diagnostics()<CR>', opts)
- buf_set_keymap('n', 'g[', '<cmd>lua vim.lsp.diagnostic.goto_prev()<CR>', opts)
- buf_set_keymap('n', 'g]', '<cmd>lua vim.lsp.diagnostic.goto_next()<CR>', opts)
-end
-
- local lsp_installer = require("nvim-lsp-installer")
- lsp_installer.on_server_ready(function(server)
-   local opts = {}
-   opts.on_attach = on_attach
-   server:setup(opts)
-   vim.cmd [[ do User LspAttachBuffers ]]
- end)
-EOF
+[[plugins]]
+ repo = 'matsui54/denops-popup-preview.vim'
+ on_source = 'ddc.vim'
+ hook_source = '''
+ call popup_preview#enable()
 '''
