remove clip board

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set-window-option -g automatic-rename off
 set-window-option -g monitor-activity on
 
 # clipboardを有効にする
-set-clipbaord on
+#set-clipbaord on
 
 # コピー、選択モードのキーバインドvi
 set -g mode-keys vi
